tests/test_if/test4.wacc
# if condition type mismatch

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  if null then
    skip 
  else 
    skip
  fi
end
